# rates

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
scripts/samples_for_smoothness/: rates_experiments.py
scripts/samples_for_smoothness/plots/: convergence_2d.py  convergence_block.py  convergence_block_cut.py  effective_dimension.py  setup_2d.py  weights_1d.py  weights_2d.py
scripts/ssl_interplay/: capacity_issue.ipynb  controlled_rates_calculation.py  controlled_results_display.ipynb  controlled_setup.ipynb  downstream_trade_off.ipynb  localized_augmentation_neural_net.ipynb  nn_downstream_trade_off.ipynb  ntk_interplay.ipynb  sphere_minimal.ipynb
scripts/ssl_interplay/figures/: eigval.ipynb  interplay.ipynb
src/rates/: config.py  targets.py
src/rates/architectures/: __init__.py  kernels.py
src/rates/auxillary/: __init__.py  dataset.py  graphs.py  linalg.py  loss.py  training.py
src/rates/datasets/: __init__.py  augmentations.py  circles.py  halfmoons.py  mixture.py  simple.py
